@@ -1,6 +1,13 @@
 $Id$
 
 ****************************** DRUPAL 6 - 2.x BRANCH ********************************
+
+July 15, 2009
+------------
+#276577 by Michelle: Added taxonomy image support for main forum listing.
+
+July 14, 2009
+------------
 #497450 by Michelle: Changed topic legend classes to match classes in topic icons themselves. The names aren't as clear but it's more consistant.
 #497450 by Michelle: Cleaned up and re-organized image css, including removing all images from Naked's CSS except forum folder / topic icons.
 NOISSUE by Michelle: Cleaned up Author Pane of stacked styles.
